@@ -16,14 +16,20 @@ repositories {
 	mavenCentral()
 }
 
-sourceCompatibility = '22'
-targetCompatibility = '22'
 version = '0.0.1'
+
+java {
+	sourceCompatibility = "22.PREVIEW"
+	targetCompatibility = "22.PREVIEW"
+}
+tasks.withType(JavaCompile).each {
+	it.options.compilerArgs.add('--enable-preview')
+}
 
 application {
 	mainModule = 'ax.xz.fuzz'
-	mainClass = 'ax.xz.fuzz.runtime.Master'
-	applicationDefaultJvmArgs = ["-Djava.library.path=${projectDir}/build/libs/main/shared"]
+	mainClass = 'ax.xz.fuzz.Master'
+	applicationDefaultJvmArgs = ["-Dcom.sun.management.jmxremote.port=9999", "--enable-preview", "-Djava.library.path=${projectDir}/build/libs/main/shared", "--add-opens=java.base/java.util=com.fasterxml.jackson.databind"]
 }
 
 dependencies {
@@ -36,6 +42,8 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.2'
 	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.17.2'
+
+	implementation 'info.picocli:picocli:4.7.6'
 
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
 }
